--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 certifi==2017.11.5
 Django==1.11.8
+django-pandas==0.5.1
+numpy==1.14.3
+pandas==0.23.0
+python-dateutil==2.7.3
 pytz==2017.3
+six==1.11.0
